[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-genre-classifier"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "streamlit==1.40.0",
    "torch==2.6.0",
    "librosa==0.10.2",
    "transformers==4.48.0",
    "soundfile==0.12.1",
    "huggingface-hub==0.26.5",
    "numpy==1.26.4",
]
